<resources>
    <string name="idSgIpt">邮箱／用户名／手机号</string>
    <string name="pwdSgIpt">密码</string>
    <string name="actIpt1">忘记密码?</string>
    <string name="actIpt2">创建新账户</string>

    <string name="title_activity_fullscreen">Fullscreen</string>
    <string name="successfully_login_message">登录成功</string>
    <string name="failure_login_message">账户或密码错误</string>
    <string name="comment_template">很喜欢这个故事</string>
    <string name="routine_edit">保存成功</string>
    <string name="empty_routine">您目前没有任何套路</string>
    <string name="empty_options">您目前没有备选统计</string>
    <string name="app_name">套路笔记</string>
    <string name="search_hint">搜索关键字</string>
    <string name="routine_list_item_title">笔记</string>
    <string name="routine_share_item_title">发现</string>
    <string name="ore_mine_item_title">挖矿</string>
    <string name="user_account_item_title">我的</string>

    <string name="invalid_input">不能输入非法字符!</string>
    <string name="net_error_msg">网络异常，请稍好重试</string>
    <string name="routine_process_title">套路历程</string>

    <string name="edit_cancel_dialog">放弃保存套路？</string>

    <string name="long_text">放弃保存套路放弃保存套路放弃保存套路放弃保存套路放弃保存套路放弃保存套路放弃保存套路放弃保存套路放弃保存套路放弃保存套路放弃保存套路放弃保存套路放弃保存套路放弃保存套路放弃保存套路放弃保存套路放弃保存套路</string>



</resources>
